--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -14,118 +14,16 @@ html, body{
       height: 100%;
 }
 
-@keyframes background-gradient{
-      0%{
-            background-position: 0;
-      }
-      100%{
-            background-position: 100%;
-      }
-}
-
-%hover {
-      transition: color 300ms;
-      &:hover{
-            color: #efefef;
-      }
-}
-
 ::selection{
       background: $green;
 }
 
-.icons-mobile{
-      display: none;
+.section-divider{
+      font-size: 2rem;
+      padding: 5rem 0;
+      text-align: center;
 }
 
-.header{
-      height: 100%;
-      background: linear-gradient(120deg, $blue, $green);
-      background-size: 200% 100%;
-      animation: background-gradient 5s linear infinite alternate;
-      color: #fff;
-
-      .header-nav ul{
-            list-style-type: none;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 35vh;
-
-            li a{
-                  padding: 0 1.5rem;
-                  font-size: 1.5rem;
-                  text-decoration: none;
-                  color: #fff;
-                  @extend %hover;
-            }
-      }
-
-      .intro{
-            position: absolute;
-            width: 50%;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            h1{
-                  font-size: 4.5rem;
-                  &::before{
-                        content: "Front-end Developer";
-                        text-transform: uppercase;
-                        font-size: 1.13rem;
-                        position: absolute;
-                        top: -1rem;
-                        font-weight: 200;
-                        letter-spacing: 1px;
-                  }
-            }
-            .icons{
-                  float: right;
-            }
-            i{
-                  font-size: 0.75em;
-                  color: #fff;
-                  @extend %hover;
-                  padding: 0 1rem;
-            }
-            p{
-                  padding-top: 1rem;
-                  font-size: 1.3rem;
-            }
-      }
-}
-
-
-@media (max-width: 1500px){
-      .icons{
-            display: none;
-      }
-      .icons-mobile{
-            display: block;
-            width: 100%;
-            text-align: center;
-            position: absolute;
-            bottom: 4rem;
-            font-size: 4.5rem;
-            i{
-                  color: #fff;
-                  padding: 0 1rem;
-            }
-      }
-}
-
-@media (max-width: 900px){
-      .header{
-            .intro{
-                  width: 90%;
-                  text-align: center;
-            }
-
-            .header-nav ul{
-                  flex-direction: column;
-                  li{
-                        padding: 0.5rem 0;
-                  }
-            }
-      }
-}
+@import 'home.scss';
+@import 'projects.scss';
+@import 'mediaQueries.scss';
