--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -159,6 +159,17 @@ html, body {
   background: #444;
 }
 
+.about {
+  display: flex;
+  justify-content: center;
+}
+.about .about-text {
+  width: 35%;
+  padding-right: 1rem;
+  align-self: center;
+  line-height: 1.7;
+}
+
 @media (max-width: 1500px) {
   .icons {
     display: none;
@@ -179,6 +190,10 @@ html, body {
 
   .projects {
     grid-template-columns: 1fr 1fr;
+  }
+
+  .about .about-text {
+    width: 60%;
   }
 }
 @media (max-width: 900px) {
@@ -201,6 +216,18 @@ html, body {
 
   .projects {
     grid-template-columns: 1fr;
+  }
+
+  .about {
+    flex-direction: column-reverse;
+  }
+  .about .about-text {
+    width: 85%;
+    padding-top: 2rem;
+    padding-right: 0;
+  }
+  .about .about-img {
+    text-align: center;
   }
 }
 
