--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -27,4 +27,5 @@ html, body{
 @import 'home.scss';
 @import 'projects.scss';
 @import 'about.scss';
+@import 'contact.scss';
 @import 'mediaQueries.scss';
