--- a/src/css/mediaQueries.scss
+++ b/src/css/mediaQueries.scss
@@ -63,4 +63,10 @@
                   text-align: center;
             }
       }
+
+      .contact{
+            a{
+                  width: 70%;
+            }
+      }
 }
