add smooth scrolling

--- a/src/css/about.scss
+++ b/src/css/about.scss
@@ -1,6 +1,8 @@
 .about{
       display: flex;
       justify-content: center;
+      padding: 5rem 0;
+      background: #f5f5f5;
       .about-text{
             width: 35%;
             padding-right: 1rem;
