style section-dividers

--- a/src/css/mediaQueries.scss
+++ b/src/css/mediaQueries.scss
@@ -79,4 +79,13 @@
                   width: 70%;
             }
       }
+
+      .section-divider{
+            margin: 3rem 0;
+            padding: 5rem 0;
+            clip-path: polygon(0 10%, 100% 0%, 100% 90%, 0% 100%);
+            h1{
+                  width: 18.5rem;
+            }
+      }
 }
