--- a/src/css/projects.scss
+++ b/src/css/projects.scss
@@ -33,7 +33,7 @@
                         position: absolute;
                         width: 100%;
                         height: 100%;
-                        background: #eee;
+                        background: #fff;
                         opacity: 0;
                         transform: rotateZ(180deg);
                         animation: hoverItem 300ms forwards;
