--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,12 +12,27 @@ html, body {
 
 ::selection {
   background: #1bffb3;
+  color: #333;
 }
 
 .section-divider {
   font-size: 2rem;
-  padding: 5rem 0;
+  padding: 10rem 0;
+  margin: 5rem 0;
   text-align: center;
+  clip-path: polygon(0 20%, 100% 0%, 100% 80%, 0% 100%);
+  background: #fafafa;
+}
+.section-divider h1 {
+  background: linear-gradient(-50deg, #1bffb3, #03a9f4);
+  width: 30rem;
+  border-radius: 25px;
+  padding: 25px;
+  margin: 0 auto;
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  box-shadow: 0 4px 5px #eee;
 }
 
 @keyframes background-gradient {
@@ -127,7 +142,7 @@ html, body {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: #eee;
+  background: #fff;
   opacity: 0;
   transform: rotateZ(180deg);
   animation: hoverItem 300ms forwards;
@@ -164,7 +179,6 @@ html, body {
   display: flex;
   justify-content: center;
   padding: 5rem 0;
-  background: #f5f5f5;
 }
 .about .about-text {
   width: 35%;
@@ -262,6 +276,15 @@ html, body {
 
   .contact a {
     width: 70%;
+  }
+
+  .section-divider {
+    margin: 3rem 0;
+    padding: 5rem 0;
+    clip-path: polygon(0 10%, 100% 0%, 100% 90%, 0% 100%);
+  }
+  .section-divider h1 {
+    width: 18.5rem;
   }
 }
 
