--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway:200,500');
+@import url('https://fonts.googleapis.com/css?family=Nunito:200,400');
 
 $blue: #03a9f4;
 $green: #1bffb3;
@@ -6,7 +6,7 @@ $green: #1bffb3;
 *{
       padding: 0;
       margin: 0;
-      font-family: 'Raleway', sans-serif;
+      font-family: 'Nunito', sans-serif;
       box-sizing: border-box;
 }
 
