--- a/src/css/projects.scss
+++ b/src/css/projects.scss
@@ -55,7 +55,7 @@
                   .actions{
                         margin-top: 1rem;
                         a{
-                              font-family: 'Raleway', sans-serif;
+                              font-family: 'Nunito', sans-serif;
                               text-decoration: none;
                               color: $blue;
                               background: #333;
