--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -71,6 +71,10 @@ html, body {
 .home .home-nav ul li {
   padding: 0.65rem 1.5rem;
 }
+.home .home-nav ul li:focus {
+  outline: 0;
+  background: rgba(255, 255, 255, 0.25);
+}
 .home .home-nav ul li, .home .home-nav ul li a {
   cursor: pointer;
   border-radius: 7px;
@@ -167,7 +171,7 @@ html, body {
   margin-top: 1rem;
 }
 .projects figure:hover .actions a {
-  font-family: "Raleway", sans-serif;
+  font-family: "Nunito", sans-serif;
   text-decoration: none;
   color: #03a9f4;
   background: #333;
