--- a/src/css/mediaQueries.scss
+++ b/src/css/mediaQueries.scss
@@ -1,16 +1,15 @@
 @media (max-width: 1500px){
       .icons{
-            display: none;
-      }
-      .icons-mobile{
-            display: block;
-            width: 100%;
+            top: initial;
+            bottom: 3rem;
+            left: 50%;
+            right: 0;
+            transform: translate(-50%, 0);
             text-align: center;
-            position: absolute;
-            bottom: 4rem;
-            font-size: 4.5rem;
-            i{
-                  color: #fff;
+            display: flex;
+            justify-content: center;
+            width: 100%;
+            a{
                   padding: 0 1rem;
             }
       }
