--- a/src/css/contact.scss
+++ b/src/css/contact.scss
@@ -1,3 +1,9 @@
+%field{
+      padding: 0.75rem;
+      border: 1px solid #ddd;
+      border-radius: 7px;
+}
+
 .contact{
       a{
             color: #333;
@@ -13,8 +19,65 @@
                   padding-right: 0.5rem;
             }
       }
+
       p{
             padding: 2rem 0;
             text-align: center;
+      }
+
+      .email-form{
+            width: 50%;
+            margin: 0 auto;
+            margin-bottom: 2rem;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            border-radius: 7px;
+            ul{
+                  list-style-type: none;
+                  width: 70%;
+                  li{
+                        position: relative;
+                        margin: 1.75rem 0;
+                        label{
+                              position: absolute;
+                              top: -12px;
+                              left: 50%;
+                              transform: translateX(-50%);
+                              background: #fff;
+                              border: 1px solid #ddd;
+                              border-radius: 7px;
+                              color: #999;
+                              padding: 0 0.4rem;
+                              cursor: text;
+                              transition: 200ms ease;
+                        }
+                        input{
+                              width: 100%;
+                              @extend %field;
+                        }
+                  }
+            }
+            textarea{
+                  display: block;
+                  width: 100% !important;
+                  min-height: 150px;
+                  @extend %field;
+            }
+            button{
+                  width: 10rem;
+                  background: $blue;
+                  color: #fff;
+                  border: 0;
+                  padding: 0.5rem;
+                  cursor: pointer;
+                  border-radius: 25px;
+                  box-shadow: 0 2px 5px #999;
+            }
+
+            :focus{
+                  outline: 0;
+                  border: 1px solid $green;
+            }
       }
 }
