--- a/src/css/mediaQueries.scss
+++ b/src/css/mediaQueries.scss
@@ -36,6 +36,12 @@
                   width: 60%;
             }
       }
+
+      .contact{
+            .email-form{
+                  width: 75%;
+            }
+      }
 }
 
 @media (max-width: 900px){
@@ -94,6 +100,9 @@
       .contact{
             a{
                   width: 70%;
+            }
+            .email-form{
+                  width: 100%;
             }
       }
 
