--- a/src/css/contact.scss
+++ b/src/css/contact.scss
@@ -64,15 +64,28 @@
                   min-height: 150px;
                   @extend %field;
             }
-            button{
-                  width: 10rem;
-                  background: $blue;
-                  color: #fff;
-                  border: 0;
-                  padding: 0.5rem;
-                  cursor: pointer;
-                  border-radius: 25px;
-                  box-shadow: 0 2px 5px #999;
+
+            .buttons{
+                  width: 70%;
+                  display: flex;
+                  button, a{
+                        width: 50%;
+                        margin: 0;
+                        background: #0071c5;
+                        color: #fff;
+                        font-size: 16px;
+                        border: 0;
+                        padding: 0.5rem;
+                        justify-content: center;
+                        cursor: pointer;
+                        transition: 200ms;
+                        &:hover{
+                              filter: brightness(110%);
+                        }
+                  }
+                  .gmail-btn{
+                        background: #d54b3d;
+                  }
             }
 
             :focus{
