--- a/src/css/contact.scss
+++ b/src/css/contact.scss
@@ -65,32 +65,9 @@
                   @extend %field;
             }
 
-            .buttons{
-                  width: 70%;
-                  display: flex;
-                  button, a{
-                        width: 50%;
-                        margin: 0;
-                        background: #0071c5;
-                        color: #fff;
-                        font-size: 16px;
-                        border: 0;
-                        padding: 0.5rem;
-                        justify-content: center;
-                        cursor: pointer;
-                        transition: 200ms;
-                        &:hover{
-                              filter: brightness(110%);
-                        }
-                  }
-                  .gmail-btn{
-                        background: #d54b3d;
-                  }
-            }
-
             :focus{
                   outline: 0;
-                  border: 1px solid $green;
+                  border: 1px solid $blue;
             }
       }
 }
