--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,6 +10,67 @@ html, body {
   height: 100%;
 }
 
+.btn {
+  padding: 0.75rem 2rem;
+  background: linear-gradient(120deg, #03a9f4, #1bffb3);
+  background-size: 200%;
+  font-weight: bold;
+  color: #fff;
+  letter-spacing: 1px;
+  font-size: 1.05rem;
+  border: 0;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  animation: fadeOut 500ms;
+}
+.btn:hover {
+  animation: fadeIn 500ms forwards;
+}
+@keyframes fadeIn {
+  from {
+    background-position: 0px;
+  }
+  to {
+    background-position-x: -50px;
+  }
+}
+@keyframes fadeOut {
+  from {
+    background-position: -50px;
+  }
+  to {
+    background-position-x: 0px;
+  }
+}
+
+#success {
+  display: none;
+}
+#success:target {
+  display: block;
+  position: relative;
+  margin-bottom: 1rem;
+  background: #1bffb3;
+  padding: 1rem;
+}
+#success:target h1 {
+  font-size: 1rem;
+  text-align: left;
+  margin-bottom: 0.3rem;
+}
+#success:target p {
+  padding: 0;
+}
+#success:target a {
+  position: absolute;
+  line-height: 0;
+  width: auto;
+  top: 5px;
+  right: 5px;
+  text-decoration: none;
+  font-size: 1.2rem;
+}
+
 ::selection {
   background: #1bffb3;
   color: #333;
@@ -266,31 +327,9 @@ html, body {
   width: 100% !important;
   min-height: 150px;
 }
-.contact .email-form .buttons {
-  width: 70%;
-  display: flex;
-}
-.contact .email-form .buttons button, .contact .email-form .buttons a {
-  width: 50%;
-  margin: 0;
-  background: #0071c5;
-  color: #fff;
-  font-size: 16px;
-  border: 0;
-  padding: 0.5rem;
-  justify-content: center;
-  cursor: pointer;
-  transition: 200ms;
-}
-.contact .email-form .buttons button:hover, .contact .email-form .buttons a:hover {
-  filter: brightness(110%);
-}
-.contact .email-form .buttons .gmail-btn {
-  background: #d54b3d;
-}
 .contact .email-form :focus {
   outline: 0;
-  border: 1px solid #1bffb3;
+  border: 1px solid #03a9f4;
 }
 
 @media (max-width: 1500px) {
